k8s/overlays/dev/dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: registry.local:5000/auth
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
