k8s/overlays/dev/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: auth
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/auth`)
      kind: Rule
      services:
        - name: auth
          port: 8080
      middlewares:
        - name: cors-header
        - name: stripprefix
